# ocncc

./: README.md
programs/apiServer/: ecosystem.config.js.js  escher_fields.json  testMessages.json
programs/apiServer/Docs/: Care MCP Server.md  MCP Server.md  OCNCC_Billing_Engine_API_Documentation.md  OCNCC_Billing_Engine_Complete_Documentation.md  Platform.md  architecture.md  documentation.md
programs/apiServer/js/: .env.example  alert-manager.js  auth-tokens.json  be-client.js  be-connection.js  billing-engine.js  config.js  escher-codec.js  escher-fields.js  generate-token.js  package-lock.json  package.json  redis-client.js  server.js  stats-tracker.js  swagger-database-spec.js  swagger-spec.js  test-codec.js
programs/apiServer/src/: .env.example  mcp-gateway.js  mcp-server.js  package-lock.json  package.json  server.js
programs/eschercodec/: create_pcap.py  create_test_pcap.py  escher_codec.py  escher_fields.json  escher_pcap.js  escher_to_pcap.py  extract_symbols.py  generate_tests.py  pcap_to_escher.py  symbols.json  testMessagesNew.json  test_symbols.json
programs/eschercodec/docs/: ESCHER_CODEC_README.md  TESTING_GUIDE.md  (+1 more)
programs/sendSOAP/: soap_sender.py
programs/sleeSnoop/: Makefile  sleeSnoop.cc  sleeSnoop.h
programs/wireshark/escherdissector/: CMakeLists.txt  bbs_escher_dissector.lua  escher_dissector.byte.lua  escher_dissector.c  escher_dissector.lua  escher_dissector.obfuscated.lua  install_dissector.sh
scripts/: rolling_capture.service  rolling_capture.sh  rolling_snoop.sh
scripts/rolling_snoop/: pcap_archive.sh  rolling_capture.sh
(+72 files in other folders)
